update adaptor ctp